--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -25,7 +25,7 @@ jobs:
       - uses: actions/checkout@v4
       - uses: wntrblm/nox@2025.02.09
         with:
-          python-versions: "3.8, 3.9, 3.10, 3.11, 3.12"
+          python-versions: "3.8, 3.9, 3.10, 3.11, 3.12, 3.13"
       - name: Test with NOX
         run: |
           nox --session tests
